--- a/app/views/beta-sprint-4/start-page-design/design3.html
+++ b/app/views/beta-sprint-4/start-page-design/design3.html
@@ -22,7 +22,7 @@
       <p>Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link" href="professions-listing-1">check if your profession is regulated</a></li>
+        <li><a class="govuk-link" href="professions-listing-1">check if your profession is regulated and the qualifications and experience needed </a></li>
         <li><a class="govuk-link" href="ra-listing-1">find contact details for your profession’s regulatory authority</a></li>
         <li><a class="govuk-link" href="#">view annual figures for applications to work in regulated professions in the UK</a></li>
       </ul>
