--- a/app/views/beta-sprint-4/start-page-design/design1.html
+++ b/app/views/beta-sprint-4/start-page-design/design1.html
@@ -31,7 +31,7 @@
 
       <p>You can see if your profession is regulated and the qualifications and experience you need to work in the UK.</p>
 
-      <p><a class="govuk-link" href="professions-listing-1">Check if your profession is regulated</a>.</p>
+      <p><a class="govuk-link" href="professions-listing-1">Check if your profession is regulated</a></p>
 
       <h2 class="govuk-heading-m">Finding a regulatory authority</h2>
 
@@ -43,7 +43,7 @@
 
       <p>You can find annual figures for the total number of applications and successful applications to work in regulated professions in the UK.</p>
 
-      <p><a class="govuk-link" href="#">Find application figures</a>.</p>
+      <p><a class="govuk-link" href="#">View application figures</a></p>
 
       <h2 class="govuk-heading-m">Getting help to check a regulated profession</h2>
 
