Iteration on start pages
Removed option 2. Updated 1 & 3. Will build option 3.

--- a/app/views/beta-sprint-4/start-page-design/design1.html
+++ b/app/views/beta-sprint-4/start-page-design/design1.html
@@ -49,6 +49,8 @@
 
       <p>Contact the <a class="govuk-link" href="#">UK Centre for Professional Qualifications (UK CPQ)</a> If you need support checking a regulated profession.</p>
 
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
       <h2 class="govuk-heading-m">Sign in to the BEIS Regulated Professions Register (RPR)</h2>
 
       <p>Regulators can use this service to:</p>
@@ -59,19 +61,10 @@
         <li>upload application and decision data</li>
       </ul>
 
-      <a href="professions-select-service.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
-        Sign in
-        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" r ole="presentation" focusable="false">
-          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-        </svg>
-      </a>
-
-      <h2 class="govuk-heading-m">Before you start</h2>
+      <p><a class="govuk-link" href="#">Sign in</a></p>
 
       <p>Please <a class="govuk-link" href="#">request an account</a> if you have not yet received sign-in details to access this service.</p>
-
-      <p><a class="govuk-link" href="#">This service is also available in Welsh (Cymraeg).</a></p>
-
+      
     </div>
 
     <div class="govuk-grid-column-one-third">
