Adding sprint 5 prototype
Adding an alternative start page route to the prototype

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,27 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+      <h2 class="govuk-heading-l" id="beta-sprint-5">
+        Beta sprint 5
+      </h2>
+
+      <h3 class="govuk-heading-m">
+        Alternative start page design
+      </h3>
+
+      <p>We have iterated the design of start page but we also want to provide an alternative to show to our users.</p>
+
+      <div>
+        <a href="beta-sprint-5/start-page-design/design1" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Go to the alternative start page
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
       <h2 class="govuk-heading-l" id="beta-sprint-4-2">
         Beta sprint 4.2 - Draft and publish design
       </h2>
