--- a/app/views/beta-sprint-5/start-page-design/design2.html
+++ b/app/views/beta-sprint-5/start-page-design/design2.html
@@ -31,48 +31,33 @@
 
       <p>You can see if your profession is regulated and the qualifications and experience you need to work in the UK.</p>
 
-      <p><a class="govuk-link" href="professions-listing-1">Check if your profession is regulated</a></p>
+      <form action="professions-listing-1" method="post" class="form">
+        {{ govukButton({
+          text: "Check if your profession is regulated"
+        }) }}
+      </form>
 
       <h2 class="govuk-heading-m">Finding a regulatory authority</h2>
 
       <p>You can find the contact details for the regulatory authority for your profession. </p>
 
-      <p><a class="govuk-link" href="ra-listing-1">Find the regulatory authority for your profession</a></p>
+      <form action="ra-listing-1" method="post" class="form">
+        {{ govukButton({
+          text: "Find the regulatory authority for your profession"
+        }) }}
+      </form>
 
       <h2 class="govuk-heading-m">Viewing figures for applications to work in regulated professions</h2>
 
       <p>You can find annual figures for the total number of applications and successful applications to work in regulated professions in the UK.</p>
 
-      <p><a class="govuk-link" href="#">View application figures</a></p>
+      {{ govukButton({
+        text: "View application figures"
+      }) }}
 
       <h2 class="govuk-heading-m">Getting help to check a regulated profession</h2>
 
       <p>Contact the <a class="govuk-link" href="#">UK Centre for Professional Qualifications (UK CPQ)</a> If you need support checking a regulated profession.</p>
-
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-      
-      <h2 class="govuk-heading-m">Sign in to the BEIS Regulated Professions Register (RPR)</h2>
-
-      <p>Regulators can use this service to:</p>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>manage information about professions</li>
-        <li>add information about professions</li>
-        <li>upload application and decision data</li>
-      </ul>
-
-      <a href="professions-select-service.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
-        Sign in
-        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" r ole="presentation" focusable="false">
-          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-        </svg>
-      </a>
-
-      <h2 class="govuk-heading-m">Before you start</h2>
-
-      <p>Please <a class="govuk-link" href="#">request an account</a> if you have not yet received sign-in details to access this service.</p>
-
-      <p><a class="govuk-link" href="#">This service is also available in Welsh (Cymraeg).</a></p>
 
     </div>
 
