--- a/app/views/beta-sprint-5/start-page-design/profession-2-registered-gas-engineer.html
+++ b/app/views/beta-sprint-5/start-page-design/profession-2-registered-gas-engineer.html
@@ -38,7 +38,7 @@
           },
           {
             key: {
-              text: "Industry / sector"
+              text: "Sector"
             },
             value: {
               text: "Construction & Engineering"
