--- a/app/views/beta-sprint-5/start-page-design/professions-listing-2.html
+++ b/app/views/beta-sprint-5/start-page-design/professions-listing-2.html
@@ -90,7 +90,7 @@
             classes: "govuk-checkboxes--small rpr-listing__filter",
             fieldset: {
               legend: {
-                text: "Industry / sector",
+                text: "Sector",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--s"
               }
@@ -216,7 +216,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Construction & Engineering"
@@ -249,7 +249,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Health"
@@ -282,7 +282,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Health"
