--- a/app/views/beta-sprint-5/start-page-design/ra-listing-1.html
+++ b/app/views/beta-sprint-5/start-page-design/ra-listing-1.html
@@ -87,7 +87,7 @@
             classes: "govuk-checkboxes--small rpr-listing__filter",
             fieldset: {
               legend: {
-                text: "Industry / sector",
+                text: "Sector",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--s"
               }
