--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,6 +31,38 @@
         Beta sprint 5
       </h2>
 
+      <h3 class="govuk-heading-m" id="beta-sprint-5-national-admin">
+        Internal - National admin
+      </h3>
+
+      <p>The following one shows the new design of:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>Profession's listing page: new table headings</li>
+        <li>Profession's listing page: new sorting options</li>
+        <li>Profession's details page: revised sidebar</li>
+      </ul>
+
+      <div>
+        <a href="beta-sprint-5/national-admin/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as an national admin
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <p>or you can use these shortcuts to see:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="beta-sprint-5/national-admin/professions-listing-1">National admin's professions listing page (default sorting)</a></li>
+        <li><a href="beta-sprint-5/national-admin/professions-listing-1-latest-modified">National admin's professions listing page (sort by latest modified)</a></li>
+        <li><a href="beta-sprint-5/national-admin/profession-3-nuclear-medicine">A published profession (sidebar revised)</a></li>
+        <li><a href="beta-sprint-5/national-admin/profession-6-dentist-draft">A draft profession (sidebar revised)</a></li>
+        <li><a href="beta-sprint-5/national-admin/ra-listing-1">National admin's regulators listing page (default sorting)</a></li>
+        <li><a href="beta-sprint-5/national-admin/ra-listing-1-latest-modified">National admin's regulators listing page (sort by latest modified)</a></li>
+        <li><a href="beta-sprint-5/national-admin/ra-1-general-medical-council">A published regulator (sidebar revised)</a></li>
+        <li><a href="beta-sprint-5/national-admin/ra-2-capita-gas-registration">A draft regulator (sidebar revised)</a></li>
+      </ul>
+
       <h3 class="govuk-heading-m">
         Alternative start page design
       </h3>
