--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -95,3 +95,41 @@ $govuk-assets-path: '/govuk/assets/';
 .rpr-details__section-title {
   text-transform: uppercase;
 }
+
+.rpr-internal-listing__sort-container {
+  margin: 1em 0;
+}
+
+.rpr-internal-listing__sort-container-left {
+  float: left;
+}
+
+.rpr-internal-listing__sort-container-right {
+  float: right;
+  padding-top: 9px;
+}
+
+.rpr-internal-listing__sort-component {
+  display: inline-block;
+  margin: 0 0 0 0.5em;
+  padding: 0;
+}
+
+.rpr-internal-listing__sort-component-list-item {
+  display: inline-block;
+}
+
+.rpr-internal-listing__sort-component-list-item:after {
+  border-right: 1px solid #b1b4b6;
+  content: "";
+  display: inline-block;
+  height: 1.2em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  position: relative;
+  top: 0.2em;
+}
+
+.rpr-internal-listing__sort-component-list-item:last-child:after { 
+    border-right: 0;
+}
