--- a/app/views/beta-sprint-5/national-admin/profession-2-registered-gas-engineer.html
+++ b/app/views/beta-sprint-5/national-admin/profession-2-registered-gas-engineer.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Plastic surgery
+  Registered Gas Engineer
 {% endblock %}
+
+{% set bodyClasses = "rpr-internal__page" %}
 
 {% block beforeContent %}
   {% from 'govuk/components/phase-banner/macro.njk' import govukPhaseBanner %}
@@ -20,9 +22,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <span class="govuk-caption-l">General Medical Council</span>
+      <span class="govuk-caption-l">Capita Gas Registration and Ancillary Services Ltd</span>
       <h1 class="govuk-heading-xl">
-        Plastic surgery
+        Registered Gas Engineer
       </h1>
 
       {{ govukSummaryList({
@@ -41,7 +43,7 @@
               text: "Sector"
             },
             value: {
-              text: "Health"
+              text: "Construction & Engineering"
             }
           }
         ]
@@ -61,7 +63,7 @@
               text: "Regulated authority"
             },
             value: {
-              text: "General Medical Council"
+              text: "Capita Gas Registration and Ancillary Services Ltd"
             }
           },
           {
@@ -69,7 +71,7 @@
               text: "Website"
             },
             value: {
-              text: "N/A"
+              html: '<a href="https://www.gassaferegister.co.uk/help-and-advice/becoming-registered/apply-now/" class="govuk-link">https://www.gassaferegister.co.uk/help-and-advice/becoming-registered/apply-now/</a>'
             }
           },
           {
@@ -77,7 +79,7 @@
               text: "Address"
             },
             value: {
-              html: '350 Euston Road</br>London</br>NW1 3JN'
+              html: '200 Chineham Park</br>Basingstoke</br>RG24 8WD'
             }
           },
           {
@@ -87,13 +89,13 @@
             value: {
               text: "N/A"
             }
-          },         
+          },        
           {
             key: {
               text: "Phone number"
             },
             value: {
-              text: "+44 161 923 6602"
+              text: "+44 (0) 7766 397564"
             }
           },
           {
@@ -101,7 +103,7 @@
               text: "Registration with regulator is"
             },
             value: {
-              text: "Mandatory"
+              text: "Voluntary"
             }
           }
         ]
@@ -121,7 +123,7 @@
               text: "Reserved activities"
             },
             value: {
-              text: "[no data]"
+              text: "Gas Safe Register is the official list of gas engineers in the UK, Isle of Man and Guernsey. To work on gas appliances and installations you must be on the gas safe register. The register exists to protect the public from unsafe gas work (EN)"
             }
           },
           {
@@ -129,7 +131,7 @@
               text: "Description of activities / regulation description"
             },
             value: {
-              text: "A major proportion of the workload involves dealing with urgent or emergency cases including: â€¢ Hand trauma. â€¢ Burns and scalds â€¢ Soft tissue injuries involving face, trunk or limbs. Elective surgery includes the following major areas: â€¢ Head and neck. This includes excisional and reconstructive surgery for congenital and acquired abnormalities, and for malignancy involving the face and mouth. â€¢ Cleft lip and palate and other craniofacial abnormalities. â€¢ Breast: including surgery for reconstruction, reduction and augmentation. â€¢ Hand and upper limb: including congenital and acquired conditions. â€¢ Skin and soft tissue tumours. â€¢ Congenital and acquired deformities of the trunk and urogenital system. â€¢ Aesthetic or cosmetic surgery."
+              text: "Gas Safe Register is the official list of gas engineers in the UK, Isle of Man and Guernsey. Gas installers work on gas appliances and installations."
             }
           }
         ]
@@ -149,7 +151,7 @@
               text: "Qualification level"
             },
             value: {
-              text: "PSM - Diploma from post-secondary level (more than 4 years) , Art. 11 e"
+              text: "ATT - Attestation of competence , Art. 11 a"
             }
           },
           {
@@ -157,7 +159,7 @@
               text: "Methods to obtain qualification"
             },
             value: {
-              text: "Vocational post-secondary education level"
+              text: "Accredited Certification Scheme accredited by the United Kongdom Accrediation Service UKAS in accordance with ISO EN 17024 or an approprate National/Scottish Vocational Qualification at level 2"
             }
           },
           {
@@ -165,7 +167,7 @@
               text: "Most common path to obtain qualification"
             },
             value: {
-              text: "Vocational post-secondary education level"
+              text: "General seconday education"
             }
           },
           {
@@ -173,7 +175,7 @@
               text: "Duration of qualification"
             },
             value: {
-              text: "7.0 Year"
+              text: "1.0 Year"
             }
           },
           {
@@ -181,7 +183,7 @@
               text: "Existence of mandatory professional experience"
             },
             value: {
-              text: "Yes"
+              text: "No"
             }
           }
         ]
@@ -201,7 +203,7 @@
               text: "National legislation"
             },
             value: {
-              text: "Medical Act 1983"
+              text: "Gas Safety (Installation and Use ) Regulations 1998"
             }
           },
           {
@@ -209,7 +211,7 @@
               text: "Legislation link"
             },
             value: {
-              html: '<a class="govuk-link" href="http://www.legislation.gov.uk/ukpga/1983/54/contents">http://www.legislation.gov.uk/ukpga/1983/54/contents</a>'
+              html: '<a class="govuk-link" href="http://www.legislation.gov.uk/uksi/1998/2451/made">http://www.legislation.gov.uk/uksi/1998/2451/made</a>'
             }
           }
         ]
@@ -220,22 +222,58 @@
 
     <div class="govuk-grid-column-one-third">
 
-      <aside class="app-related-items" role="complementary">
-        <h2 class="govuk-heading-m" id="subsection-title">
-          Related content
+      <aside class="app-related-items rpr-internal__details-page-sidebar" role="complementary">
+              
+        <h2 class="govuk-heading-s">
+          Status<br>
+          <span class="govuk-body">Published</span>
         </h2>
+
+        <h2 class="govuk-heading-s">
+          Last modified<br>
+          <span class="govuk-body">16-12-2021</span>
+        </h2>
+
+        <h2 class="govuk-heading-s">
+          Changed by<br>
+          <span class="govuk-body">Samantha Jones</span><br>
+          <span class="govuk-body"><a href="#">samanthajones@gassaferegister.co.uk</a></span>
+        </h2>
+
+        <h2 class="govuk-heading-s">
+          Currently published version<br>
+          <span class="govuk-body"><a href="#" class="govuk-link">Public facing link</a></span>
+        </h2>
+        
         <nav role="navigation" aria-labelledby="subsection-title">
-          <ul class="govuk-list govuk-!-font-size-16">
+
+          <ul class="govuk-list">
             <li>
-              <a href="index.html">
-                Search related professions
-              </a>
+              <form action="ra-amending-a-profession-start" method="post" class="form">
+                <input name="amend-profession-title" value="Registered Gas Engineer" type="hidden">
+                <input class="govuk-checkboxes__input" id="amend-profession-nations" name="amend-profession-nations" type="checkbox" value="england" type="hidden" checked>
+                <input class="govuk-checkboxes__input" id="amend-profession-nations" name="amend-profession-nations" type="checkbox" value="scotland" type="hidden" checked>
+                <input class="govuk-checkboxes__input" id="amend-profession-nations" name="amend-profession-nations" type="checkbox" value="wales" type="hidden" checked>
+                <input class="govuk-checkboxes__input" id="amend-profession-nations" name="amend-profession-nations" type="checkbox" value="northern-ireland" type="hidden" checked>
+                <input class="govuk-checkboxes__input" id="amend-profession-industries" name="amend-profession-industries" type="checkbox" value="Construction & Engineering" type="hidden" checked>
+                {{ govukButton({
+                  text: "Edit this profession",
+                  classes: "govuk-button--secondary"
+                }) }}
+              </form>
+            </li>
+            <li>
+              {{ govukButton({
+                text: "Delete this profession",
+                classes: "govuk-button--warning"
+              }) }}
             </li>
           </ul>
         </nav>
       </aside>
 
     </div>
+    
   </div>
 
 {% endblock %}
