--- a/app/views/beta-sprint-5/start-page-design/professions-listing-1.html
+++ b/app/views/beta-sprint-5/start-page-design/professions-listing-1.html
@@ -90,7 +90,7 @@
             classes: "govuk-checkboxes--small rpr-listing__filter",
             fieldset: {
               legend: {
-                text: "Industry / sector",
+                text: "Sector",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--s"
               }
@@ -214,7 +214,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Education"
@@ -245,7 +245,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Education"
@@ -276,7 +276,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Education"
@@ -309,7 +309,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Construction & Engineering"
@@ -342,7 +342,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Health"
@@ -375,7 +375,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Health"
@@ -408,7 +408,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Law"
@@ -439,7 +439,7 @@
             },
             {
               key: {
-                text: "Industry / sector"
+                text: "Sector"
               },
               value: {
                 text: "Law"
