adding profession details page iteration

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -63,6 +63,16 @@
         <li><a href="beta-sprint-5/national-admin/ra-2-capita-gas-registration">A draft regulator (sidebar revised)</a></li>
       </ul>
 
+      <h3 class="govuk-heading-m" id="beta-sprint-5-national-admin">
+        Profession details page iteration
+      </h3>
+
+      <p>Some temporary shortcuts:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="beta-sprint-5/national-admin/profession-1-plastic-surgery-sprint-5-iteration-uk">When the profession is regulated for the entire country</a></li>
+        <li><a href="beta-sprint-5/national-admin/profession-1-plastic-surgery-sprint-5-iteration-england">When the profession is regulated for certain nations</a></li>
+      </ul>
+
       <h3 class="govuk-heading-m">
         Alternative start page design
       </h3>
