--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -96,6 +96,17 @@ $govuk-assets-path: '/govuk/assets/';
   text-transform: uppercase;
 }
 
+.rpr-details__sub-group {
+  padding: 2em 0 0.5em 1em;
+  margin: 0 0 30px 0;
+  background-color: govuk-colour("light-grey");
+}
+
+.rpr-details__sub-group-title {
+  border-left: 0.5em solid govuk-colour("black");
+  padding-left: 0.5em;
+}
+
 .rpr-internal-listing__sort-container {
   margin: 1em 0;
 }
