--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -97,9 +97,8 @@ $govuk-assets-path: '/govuk/assets/';
 }
 
 .rpr-details__sub-group {
-  padding: 2em 0 0.5em 1em;
-  margin: 0 0 30px 0;
-  background-color: govuk-colour("light-grey");
+  padding: 1em 0 0 0;
+  margin: 0;
 }
 
 .rpr-details__sub-group-title {
