--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,24 @@
         </a>
       </div>
 
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+      <h2 class="govuk-heading-l" id="beta-sprint-6">
+        Beta sprint 6
+      </h2>
+
+      <h3 class="govuk-heading-m" id="beta-sprint-6-national-admin">
+        Internal - National admin
+      </h3>
+
+      <p>Some shortcuts:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="beta-sprint-6/national-admin/ra-adding-a-new-profession-page-1">National admin's adding a new profession</a></li>
+        <li><a href="beta-sprint-6/national-admin/profession-1-plastic-surgery-iteration-uk">When the profession is regulated for the entire country</a></li>
+        <li><a href="beta-sprint-6/national-admin/profession-1-plastic-surgery-iteration-england">When the profession is regulated for certain nations</a></li>
+      </ul>
+
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h2 class="govuk-heading-l" id="beta-sprint-5">
