--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,14 +33,34 @@
       </h2>
 
       <h3 class="govuk-heading-m" id="beta-sprint-6-national-admin">
-        Internal - National admin
+        Iteration on profession details page - public facing & internal
       </h3>
 
       <p>Some shortcuts:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="beta-sprint-6/national-admin/ra-adding-a-new-profession-page-1">National admin's adding a new profession</a></li>
-        <li><a href="beta-sprint-6/national-admin/profession-1-plastic-surgery-iteration-uk">When the profession is regulated for the entire country</a></li>
-        <li><a href="beta-sprint-6/national-admin/profession-1-plastic-surgery-iteration-england">When the profession is regulated for certain nations</a></li>
+        <li><a href="beta-sprint-6/national-admin/ra-adding-a-new-profession-page-1">National admin's adding a new profession - internal</a></li>
+        <li><a href="beta-sprint-6/national-admin/profession-1-plastic-surgery-iteration-uk">When the profession is regulated for the entire country - internal</a></li>
+        <li><a href="beta-sprint-6/public-facing/profession-1-plastic-surgery-iteration-uk">When the profession is regulated for the entire country - public facing</a></li>
+        <li><a href="beta-sprint-6/national-admin/profession-1-plastic-surgery-iteration-england">When the profession is regulated for certain nations - internal</a></li>
+        <li><a href="beta-sprint-6/public-facing/profession-1-plastic-surgery-iteration-england">When the profession is regulated for certain nations - public facing</a></li>
+      </ul>
+
+      <div>
+        <a href="beta-sprint-6/national-admin/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as an national admin
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <h3 class="govuk-heading-m" id="beta-sprint-6-professions-listing-page">
+        Iteration on profession listing page
+      </h3>
+
+      <p>Shortcuts:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="beta-sprint-6/public-facing/professions-listing-1">Iterated filter design (please perform a search on mobile)</a></li>
       </ul>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
