updated filter behaviour

--- a/app/views/beta-sprint-6/public-facing/professions-listing-2.html
+++ b/app/views/beta-sprint-6/public-facing/professions-listing-2.html
@@ -25,7 +25,7 @@
 
     <div class="govuk-grid-column-one-third">
 
-      <details class="govuk-details rpr-listing__filters-container" data-module="govuk-details">
+      <details class="govuk-details rpr-listing__filters-container" data-module="govuk-details" open>
         <summary class="govuk-details__summary rpr-listing__fitlers-details-summary">
           <span class="govuk-details__summary-text">
             Show filters (2)
